Enhance rainfall simulation and visual effects
- Updated rain configuration parameters for improved realism, including density, droplet size, and gravity effects.
- Refined wetting and evaporation processes to enhance the interaction between rain and the surface.
- Improved shading and overlay effects for a more dynamic visual presentation.
- Adjusted canvas resizing and rendering logic to optimize performance.
- Enhanced droplet behavior and splash effects for a more immersive experience.
- Updated CSS styles for the overlay to improve aesthetics and responsiveness.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="viewport" aria-label="L型街渠に降り注ぐ雨のデジタルアート">
+    <main class="viewport" aria-label="上空から見下ろすコンクリート面に降る雨のデジタルアート">
         <canvas id="artCanvas" aria-hidden="true"></canvas>
         <div class="overlay" role="presentation">
-            <h1>雨が染みる街渠</h1>
-            <p>Rain darkens concrete, heat breathes it dry. Watch the surface come alive in slow motion.</p>
+            <h1>雨が染みるコンクリート面</h1>
+            <p>Top-down rainfall seeps into a concrete slab. Droplets fall, pool, and evaporate in cycles of breath.</p>
         </div>
     </main>
     <noscript>
