Update README and index.html for improved descriptions and customization tips

--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Interactive digital art capturing rain soaking into an L-shaped concrete gutter in real time.">
-    <meta property="og:title" content="雨が染みる街渠 - Rain on Concrete Digital Art">
-    <meta property="og:description" content="Watch rain droplets darken concrete and slowly evaporate in this generative canvas piece.">
+    <meta name="description" content="Slow-motion rainfall on concrete. Watch droplets darken the surface, spread, and fade in quiet cycles.">
+    <meta property="og:title" content="Ame — Rain on Concrete">
+    <meta property="og:description" content="A gentle, generative piece inviting you to pause and observe rain soaking into a concrete slab.">
     <meta property="og:type" content="website">
-    <title>雨が染みる街渠 | Rain on Concrete Digital Art</title>
+    <title>Ame — Rain on Concrete</title>
     <link rel="preload" href="concrete.jpeg" as="image">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="viewport" aria-label="上空から見下ろすコンクリート面に降る雨のデジタルアート">
+    <main class="viewport" aria-label="Generative rainfall art on concrete">
         <canvas id="artCanvas" aria-hidden="true"></canvas>
         <div class="overlay" role="presentation">
-            <h1>雨が染みるコンクリート面</h1>
-            <p>Top-down rainfall seeps into a concrete slab. Droplets fall, pool, and evaporate in cycles of breath.</p>
+            <h1>Ame</h1>
+            <p>Rain falls. Concrete darkens. Water spreads and slowly fades. A quiet moment to breathe and observe.</p>
         </div>
     </main>
     <noscript>
-        <p>この作品の観賞にはJavaScriptが必要です。ブラウザでJavaScriptを有効にしてください。</p>
+        <p>This piece requires JavaScript. Please enable it in your browser to view the animation.</p>
     </noscript>
     <script src="main.js" defer></script>
 </body>
