Enhance HTML meta tags and update CSS for improved color scheme support

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
     <meta name="description" content="Slow-motion rainfall on concrete. Watch droplets darken the surface, spread, and fade in quiet cycles.">
     <meta property="og:title" content="Ame — Rain on Concrete">
     <meta property="og:description" content="A gentle, generative piece inviting you to pause and observe rain soaking into a concrete slab.">
